--- a/InteractiveJez/Report.tex
+++ b/InteractiveJez/Report.tex
@@ -494,17 +494,17 @@ $\alpha$ с новой переменной, следующей прямо за 
 Для каждой композитной подстановки в зависимости от числа составляющих её
 специальных подстановок производится один из трёх \textbf{композитных наборов}.
 \begin{enumerate}
-  \item \underline{Обе подстановки специальные}. Набор содержит четыре опции:
+  \item \textit{Обе} подстановки специальные. Набор содержит четыре опции:
   в первой выполняются обе подстановки, во второй выполняется одна и не
   выполняется другая, в третьей --- наоборот, а в четвёртой не выполняется
   ни одна из подстановок.
   
-  \item \underline{Одна подстановка специальная, другая --- нет}. В наборе
+\item \textit{Одна} подстановка специальная, другая --- нет. В наборе
   три опции: в первой выполняются обе подстановки, во второй выполняется
   специальная и не выполняется оставшаяся, в третьей просто не выполняется
   специальная.
     
-  \item \underline{Ни одна из подстановок не является специальной}. Набор
+\item \textit{Ни одна} из подстановок не является специальной. Набор
   состаляют две опции. В первой выполняются обе подстановки, а во второй не
   выполняется или одна, или другая. \textit{Этот набор единственный во
   всей программе порождает нетривиальные ограничения}.
@@ -532,6 +532,9 @@ $\alpha$ с новой переменной, следующей прямо за 
 
 \section{Функция \texttt{BlockComp}}
 
+
+\subsection{Сжатие переменной в блок} \label{block-comp}
+
 Предположим, что в уравнении нет тривиальных ограничений на его переменную $X
 \in \Xi$ (\textit{нетривиальные ограничения не обрабатываются}). При сжатии $X$
 в блок $\alpha \in \Sigma$ необходимо рассмотреть два случая:
@@ -548,7 +551,7 @@ $\alpha$ с новой переменной, следующей прямо за 
   \end{equation}
   Теперь $X$ не может начинаться или кончаться на $\alpha$ в силу
   максимальности извлечённых блоков, а также не может быть пустым (иначе
-  переменная сжимается в блок)
+  переменная сжималась бы в блок)
   \begin{equation} \label{block:constraints}
     X \ne \alpha X, \quad X \ne X \alpha, \quad X \ne \varepsilon.
   \end{equation}
@@ -556,7 +559,7 @@ $\alpha$ с новой переменной, следующей прямо за 
 
 Допустим, в уравнении есть префиксные ограничения на $X$, независимые
 относительно $\alpha$ (суффиксные ограничения здесь и далее обрабатываются
-симметричным образом). Нужно рассмотреть два случая в \eqref{block:extracted}.
+симметричным образом). Случай \eqref{block:extracted} теперь ветвится:
 \begin{itemize}
   \item Префиксный блок пуст, извлекается только суффиксный:
   \begin{displaymath}
@@ -570,17 +573,105 @@ $\alpha$ с новой переменной, следующей прямо за 
     X \to \alpha^i X \alpha^j, \ i, j \in \mathbb{N} \cup \{ 0 \}.
   \end{displaymath}
 
-  Ограничения на переменную удаляются, но \eqref{block:constraints} всё так же
+  Исходные ограничения удаляются, а \eqref{block:constraints} ---
   добавляются.
 \end{itemize}
 
 Пусть вместе с присутствующими или отсутствующими независимыми префиксными
 ограничениями на $X$ переменная также непуста. Это влияет только на сжатие
-в блок \eqref{block:collapsed}: подстановка заменяется на
+в блок \eqref{block:collapsed}: эта подстановка заменяется на
 \begin{equation} \label{block:non-empty-collapsed}
   X \to \alpha^{i + 1}, \ i \in \mathbb{N} \cup \{ 0 \},
 \end{equation}
-все ограничения на переменную, если они были в уравнении, удаляются.
+а ограничения на переменную, если были в уравнении, удаляются.
+
+Теперь рассмотрим случай, когда уравнение содержит только префиксные
+ограничения --- зависимые и, возможно, независимые. Сжатие в блок
+\eqref{block:collapsed} становится \textit{невозможным}; оно заменяется на
+пустую подстановку $X \to \varepsilon$ с удалением всех ограничений. Извлечение
+префиксного блока в \eqref{block:extracted} также незаконно, поэтому
+извлекается только суффиксный:
+\begin{equation} \label{block:dependent-prefix}
+  X \to X \alpha^j, \ j \in \mathbb{N} \cup \{ 0 \};
+\end{equation}
+прежние ограничения сохраняются, а из новых \eqref{block:constraints}
+добавляются только $X \ne \varepsilon$ и $X \ne X \alpha$, так как $X \ne
+\alpha X$ равно или слабее по силе существующих зависимых префиксных
+ограничений.
+
+Наконец, если $X$ ещё и не пуст, коллапсирование в $\varepsilon$ вообще
+блокируется, и остаётся только извлечение \eqref{block:dependent-prefix}.
+
+В Рефале блок константы, например, \texttt{('A' 0)} при подстановках в блок
+имеет вид \texttt{(('A' 0) Index (const 0))}. Здесь \texttt{Index} есть
+переменная пока что \textit{безымянного} показателя степени. В будущем, как
+станут известны все такие безымянные блоки уравнения, на место \texttt{Index}
+встанет конкретный переменный показатель: \texttt{(i1 1)}, \texttt{(i2 1)} и
+т.д.
+
+
+\subsection{Опции \texttt{BlockComp}} \label{block-option}
+
+Опция \texttt{t.BlockOption}, как и \texttt{t.PairOption}, хранит комбинации
+подстановок и модифицируемые ограничения, применяя которые из исходного
+уравнения мы получаем новые. Ограничения \texttt{block}-опции на месте будем
+делить на \textit{добавляемые} к уравнению и \textit{исключаемые} из него. Так
+делать, вообще, необязательно, но нынешняя реализация строится на этом подходе.
+Таким образом, \texttt{t.BlockOption} представляется в виде
+\begin{Verbatim}
+  ((e.Substs) (e.AddedConstrs) (e.ExcludedConstrs)). 
+\end{Verbatim}
+
+% Например, опция для извлечения из переменной \texttt{(Var 'X')} суффиксного
+% блока при сжатии \texttt{('A' 0)} и наличии зависимых префиксных ограничений
+% \texttt{e.PrefixConstrs} имеет вид
+% \begin{Verbatim}
+%   (
+%     ( /* substitutions */
+%       (assign
+%         ((Var 'X'))
+%         ((Var 'X') (('A' 0) Index (const 0)))
+%       )
+%     )
+%     ( /* added constraints */
+%       (OR (not empty (Var 'X')))
+%       (OR (not ('A' 0) ends (Var 'X')))
+%     )
+%     (/* no excluded constraints */)
+%   )
+% \end{Verbatim}
+
+В отличие от набора \texttt{pair}-опций, декартово произведение
+\texttt{t.BlockOption} всегда совместимо, поскольку мы никак не обрабатываем
+нетривиальные ограничения (а если бы даже обрабатывали, недопустима ситуация
+с двумя зависимыми относительно сжимаемой константы рестрикциями, содержащимися
+в одном ограничении --- т.е. мы всегда сможем выбрать \textit{удовлетворяющую}
+нас рестрикцию). Тем не менее, в таких наборах всё так же нужно удалять
+тривиально выполняющиеся и избыточные в связи с коллапсированием переменной в
+блок или $\varepsilon$ ограничения.
+
+Наконец, к изменённым ограничениям опции прибавляются ограничения уравнения
+(для заменещения в дальнейшем).
+
+
+\subsection{Реализация \texttt{BlockComp}}
+
+Функция принимает константу для сжатия \texttt{t.BlockConst}, константу
+и индекс \texttt{t.NewConst} и \texttt{s.NewIndex} соответственно для введения
+условий и уравнение \texttt{t.Eq}.
+
+Для каждой переменной уравнения генерируется первичный набор опций по правилам,
+описанным в разделах \ref{block-comp} и \ref{block-option}. Число опций в
+наборе варьируется от одной пустой (если зависимые и префиксные, и суффиксные
+ограничения, а переменная непуста) до целых пяти в случае, когда
+префиксные и суффиксные ограничения независимы (здесь одна опция ---
+коллапсирование переменной, другие четыре есть результат декартова произведения
+$2 \times 2$ опций с извлечением префиксных и суффиксных блоков).
+
+Выполняется декартово произведение таких первычных наборов. Полученные опции
+нормализуются и применяются к уравнению.
+
+% TODO.
 
 \end{document}
 
