--- a/InteractiveJez/Report.tex
+++ b/InteractiveJez/Report.tex
@@ -25,27 +25,6 @@
 
 \tableofcontents
 
-\section{Введение}
-
-Целью производственной практики на предприятии ИПС А.К. Айламазяна РАН является
-закрепление знаний по изучаемым дисциплинам и получение студентами практических
-навыков в период пребывания на предприятии, в связи с чем можно выделить
-следующие задачи данной практики:
-\begin{enumerate}
-\item Ознакомление с предприятием, программными продуктами предприятия,
-основыми направлениями исследований, проводимых на предприятии, кругом задач,
-решаемыми специалистами предприятия, планируемыми эффектами проводимых
-исследований и их значением для отделов разработки.
-\item Изучение новых дисциплин, связанных с предметной областью задания.
-\item Применение навыков программирования и разработки алгоритмов.
-\item Получение опыта работы с руководителем и полноценным техническим
-заданием.
-\item Приобретение навыка научно-исследовательской деятельности в процессе
-выполнения поставленной руководителем исследовательской задачи.
-\end{enumerate}
-
-
-
 \section{Описание предприятия}
 
 Институт программных систем был создан в апреле 1984 года как Филиал Института
@@ -90,8 +69,7 @@
 \end{itemize}
 Указанные модули являются частью интерактивного режима с визуализацией,
 который позволит удобно исследовать вопрос эффективности алгоритма Ежа с
-применением различных эвристик (их разработкой занимается мой научный
-руководитель А.Н. Непейвода). В частности, для управления рабочим процессом
+применением различных эвристик. В частности, для управления рабочим процессом
 интерактивного режима необходимы две вспомогательные функции:
 \begin{itemize}
 \item \texttt{Pick}, выбирающая одну из ветвей уравнения для дальнейшей работы;
@@ -106,8 +84,42 @@
 В качестве языка реализации был выбран Рефал-5, отлично подходящий для анализа
 и преобразования текстов вообще и математических структур в частности. Весь
 исходный код и различные полезные материалы, относящиеся к практике, доступны
-в репозитори \href{https://github.com/TonitaN/Misc-Lectures}
+в репозитории \href{https://github.com/TonitaN/Misc-Lectures}
 {github.com/TonitaN/Misc-Lectrues}.
+
+
+
+\section{Цели}
+
+Условием успешного прохождения производственной практики я определил для себя
+осуществление следующих целей.
+\begin{itemize}
+\item \emph{Качественная реализация программных модулей \texttt{PairComp},
+\texttt{BlockComp} и функций \texttt{Pick}, \texttt{SubstIndex} для
+эффективной работы интерактивного режима}.
+\end{itemize}
+Под словом \emph{качественная} понимается ясность и структурированность,
+быстродействие и результативность написанной программы.
+\begin{itemize}
+\item \emph{Исследование и систематизация теоретической части практической
+применимости алгоритма Ежа.}
+\end{itemize}
+С момента своей публикации (2012 год \cite{jez}) техника повторного сжатия
+рассматривалась как хороший \emph{теоретический}, но не \emph{практический}
+метод решения уравнений в словах. Однако с применением даже некоторых эвристик
+--- \emph{разрезание уравнения} и \emph{подсчёт баланса букв}, разработкой
+которых занимается мой научный руководитель А.Н. Непейвода --- техника
+рекомпрессии может стать мощным прикладным инструментом в своей области.
+\begin{itemize}
+\item \emph{Изучение языка Рефал-5, различных методов программирования,
+характерных для данного языка и функциональной парадигмы вообще, c применением
+хороших практик написания Рефал-кода.}
+\end{itemize}
+Специализация языка на работе со строковыми моделями влечёт совершенно отличный
+от многих современных ЯП способ \emph{мышления} и, как следствие, написания
+программ --- тем лично мне и интересен Рефал. Для его грамотного применения
+в работе стараюсь придерживаться рекомендаций А.В. Коновалова
+\cite{konovalov-format}, \cite{konovalov-style} по оформлению кода.
 
 
 
