--- a/InteractiveJez/Report.tex
+++ b/InteractiveJez/Report.tex
@@ -1622,7 +1622,27 @@ NameIndices {
 
 \section{Заключение}
 
-TODO.
+Настоящая практика была самым интересным и увлекательным учебным опытом,
+который когда-либо у меня был. Во многом это обусловлено простором для
+исследования и творческой свободой. Не менее мотивировала возможность
+познакомиться с задачами современной науки и внести свой небольшой вклад в их
+решение. Я особенно благодарен моему научному руководителю --- А.Н. Непейводе
+--- за энтузиазм и самоотдачу, с которыми она подходила к делу. Очень
+вдохновляет.
+
+Поставленные цели практики во многом были достигнуты. Изучение руководства
+Ф.В. Турчина \cite{turchin}, лекций А.П. Немытых \cite{nemytykh} и
+упоминавшихся рекомендаций А.В. Коновалова \cite{konovalov-format},
+\cite{konovalov-style} помогло освоиться с Рефалом-5 и его методами
+программирования. Приложение алгоритма Ежа также было формализовано --- мне
+кажется, удачно. Но программной части необоходима доработка: сейчас многие
+фрагменты кода нуждаются в рефакторинге, функции на некоторых входных данных
+возвращают некорректный результат. Тем не менее, многие классы уравнений
+обрабатываются корректно (как демонстрируют unit-тесты).
+
+Есть желание продолжать исследовать данный вопрос. Тем более, представленная
+сфера очень актуальна для современной информатики.
+
 
 \begin{thebibliography}{9}
 \bibitem{jez}
